--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="path/to/materialize.css">
     <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Open+Sans&display=swap" rel="stylesheet">
 
-    <title>React App</title>
+    <title>Michael Mendoza</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
